--- a/src/pages/client/Home/sections/Form/index.css
+++ b/src/pages/client/Home/sections/Form/index.css
@@ -12,8 +12,8 @@
   display: flex;
   align-items: baseline;
   justify-content: space-around;
-  position: absolute;
-  bottom: -48%;
+  position: relative;
+  bottom: 3rem;
   padding: 20px;
   gap: 20px;
   
@@ -49,8 +49,47 @@ input::placeholder{
   align-items: center;
   justify-content: center;
 }
-
 @media (max-width: 992px) {
+  .form-wrapper {
+    /* bottom:3rem !important; */
+    flex-direction: column;
+    max-width: 560px !important;
+    
+  }
+  .form input {
+    width: 250px !important;
+    height: 40px !important;
+  }
+  .form button {
+    width: 250px !important;
+    height: 40px !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .form-wrapper {
+    /* bottom: 4rem!important; */
+    max-width: 300px !important;
+
+  }
+  .form input {
+    width: 250px !important;
+    height: 40px !important;
+  }
+  .form button {
+    width: 250px !important;
+    height: 40px !important;
+  }
+}
+
+
+  @media (min-width: 1440px) {
+      .form-wrapper{
+          max-width: 1070px!important;
+          
+      }
+  }
+/* @media (max-width: 992px) {
   .form-wrapper {
     bottom:-80% !important;
     flex-direction: column;
@@ -89,4 +128,4 @@ input::placeholder{
           max-width: 1070px!important;
           
       }
-  }
+  } */
